# SLAgent

./: .editorconfig  .env.example  .gitignore  DEMO.md  DORAHACKS.md  Dockerfile.gateway  Dockerfile.seller  Dockerfile.wdk  HACKATHON.md  LOCAL.md  PROJECT.md  PROMPT.md  QUESTIONS  README.md  SCENARIO.md  TICKET.md  package.json  pyproject.toml
.github/workflows/: ci.yml  deploy-contracts-manual.yml  deploy-railway.yml  deploy-vercel.yml
buyer_agent/: cdp_wallet.py  client.py  dispute_policy.py  loop.py  main.py  strategy.py  tools.py  wdk_wallet.py
buyer_agent/tests/: test_buyer_agent.py  test_client_fallback.py  test_dispute_policy.py  test_loop.py  test_network_profiles.py  test_strategy.py  test_tools.py  test_wdk_wallet.py
contracts/: foundry.toml
contracts/script/: DeploySlaPayV2.s.sol
contracts/src/: SLASettlement.sol  SLAToken.sol
contracts/test/: SLAOrchestrator.t.sol  SLASettlement.t.sol
dashboard/: .env.example  console.html  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
dashboard/src/: App.tsx  api.ts  index.css  main.tsx  types.ts
data/: tool_catalog.json
docs/: AP2_FLOW.md  API.md  ARCHITECTURE.md  CICD.md  DEMO.md  ERC8004.md  SECURITY.md  SUBMISSION.md
facilitator/: settlement.py
gateway/: .env.example
scripts/: demo_one_command.py  resolve_dispute.py  run_demo.py  run_deposit_chain_demo.py  run_x402_chain_demo.py
seller/: .env.example  gemini_client.py  json_extractor.py  main.py
shared/: __init__.py  env.py  load_abi.py  network_profiles.py
wdk-service/: package-lock.json  package.json
(+96 files in other folders)
